# nix-forall

./: Cargo.toml  README.md  README.org  flake.nix
mx/: Cargo.toml
mx/src/: main.rs
nix-for-py/: Cargo.toml
nix-for-py/src/: attrset.rs  function.rs  lib.rs  list.rs  nix_evaluator.rs  store.rs
nix-for-rust/: Cargo.toml  build.rs
nix-for-rust/src/: bindings.rs  derivation.rs  error.rs  eval.rs  flakes.rs  lib.rs  main.rs  settings.rs  store.rs  term.rs  utils.rs  wrapper.h
nix-for-rust/src/eval_cache/: db.rs  mod.rs  trace.rs
nix-for-rust/src/eval_cache/migrations/: 20241209_init.sql
src/: error.rs  eval.rs  lib.rs  main.rs  store.rs  term.rs  utils.rs
