[package]
name = "nix-for-py"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.4", features = [ "anyhow", "extension-module" ] }
nix-for-rust = { path = "../nix-for-rust", features = ["eval-cache", "derivation"] }
anyhow = "1.0.84"