[package]
name = "nix-for-rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
bindgen = "0.69.4"
pkg-config = "0.3.30"

[dependencies]
anyhow = "1.0.83"
futures-util = "0.3.31"
home = "0.5.9"
thiserror = "1.0.60"
nix = { version = "0.30.1", features = [ "resource"] }
blake3 = { version = "1.5.5", features = ["mmap"], optional = true }
interprocess = { version = "2.2.2", optional = true }
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "sqlite", "migrate" ], optional = true}
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread"], optional = true }
nom = { version = "7.1.3", features = ["alloc"], optional = true }

[features]
default = []
eval-cache = ["dep:sqlx", "dep:blake3", "dep:tokio", "dep:interprocess", "nix/ptrace", "nix/fs", "nix/signal", "nix/process"]
derivation = ["dep:nom"]
